Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-753

kernel:LustreError: 4998:0:(filter_io_26.c:791:filter_commitrw_write()) LBUG

XMLWordPrintable

    • 3
    • 4873

      I hit this bug when I do the following thing:

      On a fresh lustre env:
      1. lfs setstripe -c -1 /mnt/lustre
      2. dd if=/dev/zero of=/mnt/lustre/testfile bs=1M count=1500 oflag=direct
      3. do rewrite: dd if=/dev/zero of=/mnt/lustre/testfile bs=1M count=1500 oflag=direct

      it hit this bug, and the stack trace on the OSS is:

      LustreError: 4998:0:(filter_io_26.c:791:filter_commitrw_write()) ASSERTION(oti->oti_transno <= obd->obd_last_committed) failed: oti_transno 752 last_committed 750
      LustreError: 4998:0:(filter_io_26.c:791:filter_commitrw_write()) LBUG
      Pid: 4998, comm: ll_ost_io_79

      Call Trace:
      [<ffffffffa02c2855>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]
      [<ffffffffa02c2e95>] lbug_with_loc+0x75/0xe0 [libcfs]
      [<ffffffffa08c3b11>] filter_commitrw_write+0x2dc1/0x2ec8 [obdfilter]
      [<ffffffffa0339fd1>] ? lnet_ni_send+0x51/0xe0 [lnet]
      [<ffffffffa0338cf7>] ? LNetMDBind+0x1c7/0x410 [lnet]
      [<ffffffffa050a35a>] ? ptlrpc_start_bulk_transfer+0x15a/0x620 [ptlrpc]
      [<ffffffffa08b45bd>] filter_commitrw+0x2bd/0x2e0 [obdfilter]
      [<ffffffffa050f6b5>] ? lustre_msg_buf+0x85/0x90 [ptlrpc]
      [<ffffffffa053b82b>] ? __req_capsule_get+0x14b/0x6b0 [ptlrpc]
      [<ffffffffa03c398c>] ? lprocfs_counter_add+0x12c/0x196 [lvfs]
      [<ffffffffa087c4aa>] obd_commitrw+0x11a/0x410 [ost]
      [<ffffffffa088674b>] ost_brw_write+0xf2b/0x18a0 [ost]
      [<ffffffffa05109d1>] ? lustre_pack_reply_flags+0xd1/0x1f0 [ptlrpc]
      [<ffffffff8126ac7c>] ? put_dec+0x10c/0x110
      [<ffffffff8126af6e>] ? number+0x2ee/0x320
      [<ffffffffa04d1890>] ? target_bulk_timeout+0x0/0xe0 [ptlrpc]
      [<ffffffffa088ad35>] ost_handle+0x3325/0x4b90 [ost]
      [<ffffffffa02cd6b1>] ? libcfs_debug_vmsg2+0x4d1/0xb50 [libcfs]
      [<ffffffffa050f314>] ? lustre_msg_get_opc+0x94/0x100 [ptlrpc]
      [<ffffffffa0511a5c>] ? lustre_msg_get_status+0x3c/0xa0 [ptlrpc]
      [<ffffffffa051fe8e>] ptlrpc_main+0xb8e/0x1900 [ptlrpc]
      [<ffffffffa051f300>] ? ptlrpc_main+0x0/0x1900 [ptlrpc]
      [<ffffffff8100c1ca>] child_rip+0xa/0x20
      [<ffffffffa051f300>] ? ptlrpc_main+0x0/0x1900 [ptlrpc]
      [<ffffffffa051f300>] ? ptlrpc_main+0x0/0x1900 [ptlrpc]
      [<ffffffff8100c1c0>] ? child_rip+0x0/0x20

      LustreError: dumping log to /tmp/lustre-log.1318354849.4998


      Info required for matching: sanity-quota test_23a 23a

            niu Niu Yawei (Inactive)
            jay Jinshan Xiong (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: