LU-753 ofd: LBUG on filter_commitrw_write():791

A hot fix for this issue.

Change-Id: Ief660853256e615f53a1af46da099ba783e6f047
Signed-off-by: Jinshan Xiong <jay@whamcloud.com>